
* GITHUB#13950: Make BooleanQuery#getClauses public and add #add(Collection<BooleanClause>) to BQ builder. (Shubham Chaudhary)

* GITHUB#13957: Removed LeafSimScorer class, to save its overhead. Scorers now
  compute scores directly from a SimScorer, postings and norms. (Adrien Grand)

New Features
---------------------
(No changes)

Improvements
---------------------
(No changes)

Optimizations
---------------------

* GITHUB#13828: Reduce long[] array allocation for bitset in readBitSetIterator. (Zhang Chao)

* GITHUB#13800: MaxScoreBulkScorer now recomputes scorer partitions when the
  minimum competitive allows for a more favorable partitioning. (Adrien Grand)

* GITHUB#13930: Use growNoCopy when copying bytes in BytesRefBuilder. (Ignacio Vera)

* GITHUB#13931: Refactored `BooleanScorer` to evaluate matches of sub clauses
  using the `Scorer` abstraction rather than the `BulkScorer` abstraction. This
  speeds up exhaustive evaluation of disjunctions of term queries.
  (Adrien Grand)

* GITHUB#13941: Optimized computation of top-hits on disjunctive queries with
  many clauses. (Adrien Grand)

* GITHUB#13954: Disabled exchanging scores across slices for exhaustive
  top-hits evaluation. (Adrien Grand)

* GITHUB#13899: Check ahead if we can get the count. (Lu Xugang)

* GITHUB#13943: Removed shared `HitsThresholdChecker`, which reduces overhead
  but may delay a bit when dynamic pruning kicks in. (Adrien Grand)

* GITHUB#13961: Replace Map<String,Object> with IntObjectHashMap for DV producer. (Pan Guixin)

* GITHUB#13963: Speed up nextDoc() implementations in Lucene912PostingsReader.
  (Adrien Grand)

* GITHUB#13958: Speed up advancing within a block. (Adrien Grand)

* GITHUB#13763: Replace Map<String,Object> with IntObjectHashMap for KnnVectorsReader (Pan Guixin)

* GITHUB#13968: Switch postings from storing doc IDs in a long[] to an int[].
  Lucene 8.4 had moved to a long[] to help speed up block decoding by using