@@ -38,12 +38,16 @@ import org.apache.lucene.util.VectorUtil;
  * vectorization modules in the Java runtime this class provides optimized implementations (using
  * SIMD) of several algorithms used throughout Apache Lucene.
  *
+ * <p>Expert: set the {@value #UPPER_JAVA_FEATURE_VERSION_SYSPROP} system property to increase the
+ * set of Java versions this class will provide optimized implementations for.
+ *
  * @lucene.internal
  */
 public abstract class VectorizationProvider {
 
   static final OptionalInt TESTS_VECTOR_SIZE;
   static final boolean TESTS_FORCE_INTEGER_VECTORS;
+  static final int UPPER_JAVA_FEATURE_VERSION = getUpperJavaFeatureVersion();
 
   static {
     var vs = OptionalInt.empty();
@@ -69,6 +73,27 @@ public abstract class VectorizationProvider {
       // ignored
     }
     TESTS_FORCE_INTEGER_VECTORS = enforce;
+  }
+
+  private static final String UPPER_JAVA_FEATURE_VERSION_SYSPROP =
+      "org.apache.lucene.vectorization.upperJavaFeatureVersion";
+  private static final int DEFAULT_UPPER_JAVA_FEATURE_VERSION = 23;
+
+  private static int getUpperJavaFeatureVersion() {
+    int runtimeVersion = DEFAULT_UPPER_JAVA_FEATURE_VERSION;
+    try {
+      String str = System.getProperty(UPPER_JAVA_FEATURE_VERSION_SYSPROP);
+      if (str != null) {
+        runtimeVersion = Math.max(Integer.parseInt(str), runtimeVersion);
+      }
+    } catch (@SuppressWarnings("unused") NumberFormatException | SecurityException ignored) {
+      Logger.getLogger(VectorizationProvider.class.getName())
+          .warning(
+              "Cannot read sysprop "
+                  + UPPER_JAVA_FEATURE_VERSION_SYSPROP
+                  + ", so the default value will be used.");
+    }
+    return runtimeVersion;
   }
 
   /**
@@ -108,7 +133,7 @@ public abstract class VectorizationProvider {
   static VectorizationProvider lookup(boolean testMode) {
     final int runtimeVersion = Runtime.version().feature();
     assert runtimeVersion >= 21;
-    if (runtimeVersion <= 23) {
+    if (runtimeVersion <= UPPER_JAVA_FEATURE_VERSION) {
       // only use vector module with Hotspot VM
       if (!Constants.IS_HOTSPOT_VM) {
         LOG.warning(
